[Campaign]:  Enagage design Partially Complete

--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -46,173 +46,27 @@
           <th>Ends</th>
         </tr>
         </thead>
-        <tbody>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="id_1" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="cmn-toggle-1" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="cmn-toggle-1"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Status Update</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>NA</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="id_2" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="cmn-toggle-2" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="cmn-toggle-2"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Profile Picture</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>July 21, 2015</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="id_3" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="cmn-toggle-3" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="cmn-toggle-3"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Header Image</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>July 21, 2015</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="id_4" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="cmn-toggle-4" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="cmn-toggle-4"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Post</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>NA</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> 18 - 24</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> 25 - 34</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> 35 - 44</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> 45 - 54</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> 55 - 64</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> 65+</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="id_5" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="cmn-toggle-5" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="cmn-toggle-5"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Post</td>
-          <td>24,000</td>
-          <td>6,30,537</td>
-          <td>NA</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="id_6" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="cmn-toggle-6" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="cmn-toggle-6"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Profile Picture</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>July 21, 2015</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="id_7" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="cmn-toggle-7" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="cmn-toggle-7"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Header Image</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>July 21, 2015</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="id_8" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="cmn-toggle-8" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="cmn-toggle-8"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Post</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>NA</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="id_9" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="cmn-toggle-9" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="cmn-toggle-9"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Post</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>NA</td>
-        </tr>
-        </tbody>
+
+        <% if @campaigns.present? %>
+            <tbody>
+            <% @campaigns.each do |campaign| %>
+                <tr>
+                  <td class="squaredFour"><input type="checkbox" id="id_'<%= campaign.id %>'" value="1"/></td>
+                  <td>
+                    <div class="switch">
+                      <input id="cmn-toggle-'<%= campaign.id %>'" class="cmn-toggle cmn-toggle-round" type="checkbox" value="<%= campaign.campaign_active %>">
+                      <label for="cmn-toggle-'<%= campaign.id %>'"></label>
+                    </div>
+                  </td>
+                  <td><%= image_tag( campaign.offer.sender.image , :class => 'pepsi-img-responsive' ) %> &nbsp; <%= campaign.campaign_name %></td>
+                  <td><%= campaign.number_of_likes %></td>
+                  <td><%= campaign.number_of_post_reach %></td>
+                  <td><%= campaign.campaign_end_date.present? ? campaign.campaign_end_date : 'NA' %></td>
+                </tr>
+            <% end %>
+            </tbody>
+        <% end %>
+
       </table>
     </div>
 
@@ -230,171 +84,26 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="engagement_1" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="engagement_switch_1" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="engagement_switch_1"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Status Update</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>5,868</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="engagement_2" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="engagement_switch_2" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="engagement_switch_2"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Profile Picture</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>5,868</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="engagement_3" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="engagement_switch_3" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="engagement_switch_3"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Header Image</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>5,868</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="engagement_4" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="engagement_switch_4" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="engagement_switch_4"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Post</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>5,868</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> United Arab Emirates</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> India</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> HongKong</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> Singapore</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> United Kingdom</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td><div class="pepsi-img-none"></div> Mexico</td>
-          <td>1,38,000</td>
-          <td>30,000</td>
-          <td></td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="engagement_5" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="engagement_switch_5" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="engagement_switch_5"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Post</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>5,865</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="engagement_6" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="engagement_switch_6" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="engagement_switch_6"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Profile Picture</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>5,865</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="engagement_7" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="engagement_switch_7" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="engagement_switch_7"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Header Image</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>5,865</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="engagement_8" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="engagement_switch_8" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="engagement_switch_8"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Post</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>5,865</td>
-        </tr>
-        <tr>
-          <td class="squaredFour"><input type="checkbox" id="engagement_9" value="1"/></td>
-          <td>
-            <div class="switch">
-              <input id="engagement_switch_9" class="cmn-toggle cmn-toggle-round" type="checkbox">
-              <label for="engagement_switch_9"></label>
-            </div>
-          </td>
-          <td><img src="images/pepsi-small.jpg" class="pepsi-img-responsive">&nbsp; Pepsi Co - Post</td>
-          <td>24,000</td>
-          <td>1,30,537</td>
-          <td>5,865</td>
-        </tr>
+        <% if @campaigns.present? %>
+            <tbody>
+            <% @campaigns.each do |campaign| %>
+                <tr>
+                  <td class="squaredFour"><input type="checkbox" id="engagement_'<%= campaign.id %>'" value="1"/></td>
+                  <td>
+                    <div class="switch">
+                      <input id="engagement_switch_'<%= campaign.id %>'" class="cmn-toggle cmn-toggle-round" type="checkbox" value="<%= campaign.campaign_active %>">
+                      <label for="engagement_switch_'<%= campaign.id %>'"></label>
+                    </div>
+                  </td>
+                  <td><%= image_tag( campaign.offer.sender.image , :class => 'pepsi-img-responsive' ) %> &nbsp; <%= campaign.campaign_name %></td>
+                  <td><%= campaign.number_of_likes %></td>
+                  <td><%= campaign.number_of_comments %></td>
+                  <td><%= campaign.number_of_shares %></td>
+                </tr>
+            <% end %>
+            </tbody>
+        <% end %>
+
         </tbody>
       </table>
     </div>
