--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -385,3 +385,142 @@ only screen and (max-width: 460px) {
     padding: 15px 20px;
 }
 
+.campaign-create-wrapper {
+    margin: 20px;
+    background-color: rgba(255, 255, 255, 1);
+    -webkit-box-shadow: 0 0 2px #999999;
+    -moz-box-shadow: 0 0 2px #999999;
+    box-shadow: 0 0 2px #999999;
+    padding: 25px;
+}
+
+.campaign-influencer-picture {
+    border-radius: 50%;
+    border: 4px solid #cdcdcd;
+    display: block;
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+}
+
+.campaign-create-wrapper .influencer-address {
+    font-size: 12px;
+}
+
+.btn-message{
+    background-color: #f8c102;
+    margin-top: 17%;
+    width: 138px;
+    height: 38px;
+    display: block;
+    color: #FFFFFF;
+}
+
+.influencer-title {
+    font-size: 13px;
+}
+
+.profile-info{
+    padding: 28px 75px 34px 0;
+    width: 100%;
+}
+
+.social-account-tab-content {
+    border: 1px solid #ddd ;
+    border-top: none;
+    padding-top: 35px;
+    padding-right: 30px;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+
+.social-account-tabs .social-account-nav-tabs a {
+    color: #696969;
+}
+
+.social-account-tabs .social-account-nav-tabs li.active .social-account-fa-edit {
+    color: #3c8dbc;
+}
+
+.social-account-fa-edit {
+    font-size: 1.5em;
+    padding-right: 5px;
+}
+
+.social-account-tab-content .form-group {
+    text-align: right;
+}
+
+.social-account-tab-content label {
+    padding-right: 15px;
+}
+
+.social-account-tab-content input:not([type=radio]), .social-account-tab-content select {
+    width: 52%;
+    display: inline;
+    margin: 5px;
+}
+
+.text-pink   {
+    font-size: 13px;
+    color: #ff305a;
+    font-weight: 600;
+    padding: 20px 0;
+}
+
+.text-headline-form, .payment-form {
+    padding-left: 35px;
+    padding-top: 10px;
+}
+
+.text-headline-form input, .text-headline-form textarea {
+    width: 70%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+}
+
+.text-headline-form textarea {
+    resize: none;
+}
+
+.type-of-post {
+    background-color: #ffffff;
+    padding: 3px;
+}
+
+.payment-form select {
+    background-color: #ffffff;
+    padding: 3px;
+    margin: 10px 0;
+    width: 108px;
+}
+
+.payment-form input {
+    margin: 10px 0;
+    padding: 5px;
+
+}
+
+.payment-form .card-number {
+    width: 220px;
+}
+
+.payment-form .card-holder-name {
+    width: 270px;
+}
+
+.campaign-create-wrapper .btn-book-now {
+    background-color: #e13f3c;
+    color: white;
+    margin-top: 5%;
+    margin-left: 10px;
+    padding: 8px 28px;
+    font-weight: 600;
+}
+
+.campaign-create-wrapper .grey-color {
+    background-color: #999999;
+}
+
