- feature toggle star offer complete

--- a/app/views/offers/_influencer_offer_view.erb
+++ b/app/views/offers/_influencer_offer_view.erb
@@ -1,6 +1,6 @@
 <tr>
   <td><span class="status-inbox status-inbox"></span></td>
-  <td class="squaredFour"><input type="checkbox"  value="1" class="select-offer"/></td>
+  <td class="squaredFour"><input type="checkbox"  value="1" class="select-offer" data-id="<%=offer.id %>"/></td>
   <td class="inbox-star">
     <%= link_to toggle_star_offers_path(ids: [offer.id], authenticity_token: form_authenticity_token), method: :put, remote: true do %>
         <i class="fa fa-star <%= offer.starred_by_influencer ? 'star-yellow' : 'star-grey' %>"></i>
