--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -5,9 +5,8 @@
 <div class="header-bottom-margin"></div>
 <div class="payment-div ">
   <div class="payment-button-set pull-right">
-    <button class="btn btn-compose">COMPOSE</button>
     <div class="star-del-ref-panel">
-      <a href="#"><img src="<%= asset_path('star-icon.png') %>"></a>
+      <%= image_tag  asset_path('star-icon.png'), class: 'make-all-stared'%>
       <a href="#"><img src="<%= asset_path('trash-icon.png') %>"></a>
       <a href="#"><img src="<%= asset_path('Refresh_icon.png') %>"></a>
 
