--- a/app/views/offers/toggle_star.js.erb
+++ b/app/views/offers/toggle_star.js.erb
@@ -1,1 +1,7 @@
 window.location.reload();
+$(function(){
+    $('.select-offer:checkbox:checked').each(function(){
+        this.checked = false;
+    });
+
+});
