[Campaign]: Influencer campaigns shows created campaigns

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -237,8 +237,10 @@ input.cmn-toggle-round:checked + label:after {
 
 .pepsi-img-responsive {
     display: inline-block;
-    width: 20px;
-    height: auto;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+
 }
 
 .pepsi-img-none {
