--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -115,7 +115,7 @@
                       </div>
                     </div>
                     <div class="">
-                      <% offer_id = rand(100) %>
+                      <% offer_id = 1 %>
                       <%= f.hidden_field :offer_id, {value: offer_id} %>
                     </div>
 
