--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -61,7 +61,7 @@
                   <td><%= image_tag( campaign.offer.sender.image.present? ? campaign.offer.sender.image : 'default_profile_picture.png' , :class => 'pepsi-img-responsive' ) %> &nbsp; <%= campaign.name %></td>
                   <td><%= campaign.number_of_likes %></td>
                   <td><%= campaign.number_of_post_reach %></td>
-                  <td><%= campaign.end_date.present? ? campaign.end_date : 'NA' %></td>
+                  <td><%= campaign.end_date.present? ? campaign.end_date.strftime("%B %d, %Y") : 'NA' %></td>
                 </tr>
             <% end %>
             </tbody>
