--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -550,4 +550,10 @@ only screen and (max-width: 460px) {
     padding-top: 5px;
 }
 
+.campaign-date {
+    width: 280px;
+    background-color: #dbd9da;
+    padding: 10px 20px;
+}
+
 
