--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,6 @@
  *= require offers
  *= require payments
  *= require profile
- *= require bootstrap-datetimepicker.min
+ * require bootstrap-datetimepicker.min
  *= require_self
  */
