[Campaign]: 1. Start and End Date design change in New Campaign Page, 2. Credit Card Validation added

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -550,6 +550,7 @@ only screen and (max-width: 460px) {
     width: 280px;
     background-color: #dbd9da;
     padding: 10px 20px;
+    margin: 20px 0 0 7px;
 }
 
 .social-account-tab-content  input#campaign_cost{
